--- a/apps/helloworld/deployment.yaml
+++ b/apps/helloworld/deployment.yaml
@@ -14,20 +14,5 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: hashicorp/http-echo
-        args:
-        - "-text=hello from ArgoCD"
-        ports:
-        - containerPort: 5678
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-world
-spec:
-  selector:
-    app: hello-world
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 5678
+        image: quay.io/prometheus/busybox:latest
+        command: ["echo", "hello world"]
